src/main/java/kmade/kmade/adaptatorFC/parserExpression/Postcondition.java
/* Generated By:JavaCC: Do not edit this line. Postcondition.java */
package kmade.kmade.adaptatorFC.parserExpression;

import kmade.nmda.schema.expression.NodeExpression;
import kmade.nmda.schema.expression.NotComma;
import kmade.nmda.schema.expression.GroupExpressExpression;
import kmade.nmda.schema.expression.RemoveUnaryFunction;
import kmade.nmda.schema.expression.ExpressException;
import kmade.nmda.schema.expression.SetFunction;
import kmade.nmda.schema.expression.SetUnaryFunction;
import kmade.nmda.schema.expression.AssignmentOperator;
import kmade.nmda.schema.expression.Assignment;
import kmade.nmda.schema.expression.PlusAssignment;
import kmade.nmda.schema.expression.MinusAssignment;
import kmade.nmda.schema.expression.AttributExpressExpression;
import kmade.nmda.schema.expression.StringConstant;
import kmade.nmda.schema.expression.IntegerConstant;
import kmade.nmda.schema.expression.BooleanConstant;
import kmade.nmda.schema.expression.UserBoolean;
import kmade.nmda.schema.expression.UserString;
import kmade.nmda.schema.expression.UserInteger;
import kmade.nmda.schema.expression.CreateFunction;
import kmade.nmda.schema.expression.ReplaceFunction;
import kmade.nmda.schema.expression.AddUnaryFunction;
import kmade.nmda.schema.expression.VoidConstant;
import kmade.nmda.schema.expression.GetFunction;
import kmade.nmda.schema.expression.PlusComputing;
import kmade.nmda.schema.expression.MinusComputing;
import kmade.nmda.schema.expression.ParenthesisExpression;
import kmade.nmda.schema.expression.GetUnaryFunction;
import kmade.kmade.KMADEConstant;

@SuppressWarnings({"all"})
public class Postcondition implements PostconditionConstants {

  public ParseException generateParseException() {
      Token errortok = token.next;
      int line = errortok.beginLine, column = errortok.beginColumn;
      String mess = (errortok.kind == 0) ? tokenImage[0] : errortok.image;
      return new ParseException(KMADEConstant.COLUMN_MESSAGE + " " + column + ", " + KMADEConstant.ENCOUNTERED_TOKEN_MESSAGE + " \"" + mess + " \"");
  }

  final public NodeExpression expression() throws ParseException {
        NodeExpression node;
    if (jj_2_1(2)) {
      node = sequentialExpression();
      jj_consume_token(0);
                                              {if (true) return node;}
    } else if (jj_2_2(2)) {
      jj_consume_token(VOID_TYPE);
      jj_consume_token(0);
                           {if (true) return new VoidConstant();}
    } else if (jj_2_3(2)) {
      jj_consume_token(0);
                {if (true) throw new ParseException(KMADEConstant.NO_EXPRESSION_MESSAGE);}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public NodeExpression sequentialExpression() throws ParseException {
        NodeExpression left;
        NodeExpression right;
        NotComma notComma;
    left = primaryExpression();
    label_1:
    while (true) {
      if (jj_2_4(2)) {
        ;
      } else {
        break label_1;
      }
      jj_consume_token(SEQUENCE);
                                                  notComma = new NotComma(left);
      right = primaryExpression();
                if (notComma != null) {
                        notComma.setRightNode(right);
                        left = notComma;
                }
    }
                {if (true) return left;}
    throw new Error("Missing return statement in function");
  }

  final public NodeExpression primaryExpression() throws ParseException {
        NodeExpression node;
    if (jj_2_5(2)) {
      node = remove();
                          {if (true) return node;}
    } else if (jj_2_6(2)) {
      node = set();
                       {if (true) return node;}
    } else if (jj_2_7(2)) {
      node = add();
                       {if (true) return node;}
    } else if (jj_2_8(2)) {
      node = replace();
                           {if (true) return node;}
    } else if (jj_2_9(2)) {
      node = create();
                      {if (true) return node;}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public NodeExpression remove() throws ParseException {
        Token myIdentToken;
        GroupExpressExpression myGroupRef;
        NodeExpression node;
    jj_consume_token(REMOVE);
    jj_consume_token(PARO);
    myIdentToken = jj_consume_token(IDENT);
    jj_consume_token(PARF);
                try {
                        {if (true) return new RemoveUnaryFunction(new GroupExpressExpression(myIdentToken.image.substring(1).toLowerCase()));}
                } catch (ExpressException e) {
                        {if (true) throw new Error(e.toString());}
                }
    throw new Error("Missing return statement in function");
  }

  final public NodeExpression set() throws ParseException {
        AssignmentOperator nodeAssignment;
        NodeExpression setFunction;
    jj_consume_token(SET);
    jj_consume_token(PARO);
    if (jj_2_10(2)) {
      nodeAssignment = withGroup();
                setFunction = new SetFunction(((AttributExpressExpression)nodeAssignment.getLeftNode()).getGroupExpressExpression(), nodeAssignment);
    } else if (jj_2_11(2)) {
      nodeAssignment = onlyAssignment(null);
                setFunction = new SetUnaryFunction(nodeAssignment); // null Group from Attribut

    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(PARF);
                {if (true) return setFunction;}
    throw new Error("Missing return statement in function");
  }

  final public AssignmentOperator withGroup() throws ParseException {
        Token myIdentToken;
        AssignmentOperator node;
        GroupExpressExpression myExpression;
    myIdentToken = jj_consume_token(IDENT);
                try {
                        myExpression = new GroupExpressExpression(myIdentToken.image.substring(1).toLowerCase());
                } catch (ExpressException e) {
                        {if (true) throw new Error(e.toString());}
                }
    jj_consume_token(COMA);
    node = onlyAssignment(myExpression);
                {if (true) return node;}
    throw new Error("Missing return statement in function");
  }

  final public NodeExpression add() throws ParseException {
        Token myIdentToken;
    jj_consume_token(ADD);
    jj_consume_token(PARO);
    myIdentToken = jj_consume_token(IDENT);
    jj_consume_token(PARF);
                try {
                        {if (true) return new AddUnaryFunction(new GroupExpressExpression(myIdentToken.image.substring(1).toLowerCase()));}
                } catch (ExpressException e) {
                        {if (true) throw new Error(e.toString());}
                }
    throw new Error("Missing return statement in function");
  }

  final public NodeExpression create() throws ParseException {
        Token myIdentToken;
        Token myNewConcret;
        NodeExpression refNode;
        GroupExpressExpression myExpression;
    jj_consume_token(CREATE);
    jj_consume_token(PARO);
    myIdentToken = jj_consume_token(IDENT);
                try {
                        myExpression = new GroupExpressExpression(myIdentToken.image.substring(1).toLowerCase());
                } catch (ExpressException e) {
                        {if (true) throw new Error(e.toString());}
                }
    jj_consume_token(COMA);
    refNode = sumAssignment(myExpression);
    jj_consume_token(PARF);
                {if (true) return new CreateFunction(myExpression, refNode);}
    throw new Error("Missing return statement in function");
  }

  final public NodeExpression replace() throws ParseException {
        Token myFirstIdentToken;
        Token mySecondIdentToken;
    jj_consume_token(REPLACE);
    jj_consume_token(PARO);
    myFirstIdentToken = jj_consume_token(IDENT);
    jj_consume_token(COMA);
    mySecondIdentToken = jj_consume_token(IDENT);
    jj_consume_token(PARF);
                try {
                        {if (true) return new ReplaceFunction(new GroupExpressExpression(myFirstIdentToken.image.substring(1).toLowerCase()),
                                new GroupExpressExpression(mySecondIdentToken.image.substring(1).toLowerCase()));}
                } catch (ExpressException e) {
                        {if (true) throw new Error(e.toString());}
                }
    throw new Error("Missing return statement in function");
  }

  final public AssignmentOperator onlyAssignment(GroupExpressExpression ref) throws ParseException {
        Token myIdentToken;
        AttributExpressExpression myIdentNode;
        AssignmentOperator refAOp;
        NodeExpression myExpression;
    myIdentToken = jj_consume_token(IDENT);
                if (ref == null) {
                        myIdentNode = new AttributExpressExpression(myIdentToken.image.substring(1).toLowerCase());
                } else {
                        try {
                                myIdentNode = new AttributExpressExpression(myIdentToken.image.substring(1).toLowerCase(),ref);
                        } catch (ExpressException e) {
                                {if (true) throw new Error(e.toString());}
                        }
                }
    if (jj_2_12(2)) {
      jj_consume_token(ASSIGNMENT);
                                 refAOp = new Assignment(myIdentNode);
    } else if (jj_2_13(2)) {
      jj_consume_token(PLUS_ASSIGNMENT);
                                  refAOp = new PlusAssignment(myIdentNode);
    } else if (jj_2_14(2)) {
      jj_consume_token(MINUS_ASSIGNMENT);
                                   refAOp = new MinusAssignment(myIdentNode);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    myExpression = sumAssignment(ref);
                refAOp.setRightNode(myExpression);
                {if (true) return refAOp;}
    throw new Error("Missing return statement in function");
  }

  final public NodeExpression sumAssignment(GroupExpressExpression ref) throws ParseException {
        Token operator;
        NodeExpression left;
        NodeExpression right;
    left = primaryAssignment(ref);
    label_2:
    while (true) {
      if (jj_2_15(2)) {
        ;
      } else {
        break label_2;
      }
      if (jj_2_16(2)) {
        operator = jj_consume_token(PLUS);
      } else if (jj_2_17(2)) {
        operator = jj_consume_token(MINUS);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      right = primaryAssignment(ref);
                        if (operator.kind == PLUS) {
                                left = new PlusComputing(left,right);
                        } else {
                                left = new MinusComputing(left,right);
                        }
    }
                {if (true) return left;}
    throw new Error("Missing return statement in function");
  }

  final public NodeExpression primaryAssignment(GroupExpressExpression ref) throws ParseException {
        NodeExpression node;
        Token myToken;
    if (jj_2_18(2)) {
      node = getValueDouble(ref);
                                     {if (true) return node;}
    } else if (jj_2_19(2)) {
      myToken = jj_consume_token(STRING);
                {if (true) return new StringConstant(myToken.image.substring(1,myToken.image.length() - 1));}
    } else if (jj_2_20(2)) {
      myToken = jj_consume_token(INTEGER);
                {if (true) return new IntegerConstant(Integer.parseInt(myToken.image));}
    } else if (jj_2_21(2)) {
      myToken = jj_consume_token(BOOLEAN);
                {if (true) return new BooleanConstant(Boolean.parseBoolean(myToken.image));}
    } else if (jj_2_22(2)) {
      jj_consume_token(UNKNOWN_INT);
                          {if (true) return new UserInteger();}
    } else if (jj_2_23(2)) {
      jj_consume_token(UNKNOWN_STRING);
                         {if (true) return new UserString();}
    } else if (jj_2_24(2)) {
      jj_consume_token(UNKNOWN_BOOLEAN);
                          {if (true) return new UserBoolean();}
    } else if (jj_2_25(2)) {
      jj_consume_token(PARO);
      node = sumAssignment(ref);
      jj_consume_token(PARF);
                                                  {if (true) return new ParenthesisExpression(node);}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public NodeExpression getValueDouble(GroupExpressExpression ref) throws ParseException {
        Token myGroupOrAttributToken;
        Token myAttrToken = null;
    jj_consume_token(GETVALUE);
    jj_consume_token(PARO);
    myGroupOrAttributToken = jj_consume_token(IDENT);
    if (jj_2_26(2)) {
      jj_consume_token(COMA);
      myAttrToken = jj_consume_token(IDENT);
    } else {
      ;
    }
    jj_consume_token(PARF);
                GroupExpressExpression myGroupRef = null;
                AttributExpressExpression myAttrRef = null;

                try {
                        if (myAttrToken == null) {
                                myGroupRef = ref;
                                myAttrRef = new AttributExpressExpression(myGroupOrAttributToken.image.substring(1).toLowerCase(), myGroupRef);
                                if (myGroupRef == null) {
                                        {if (true) return new GetUnaryFunction(myAttrRef);}
                                } else {
                                        {if (true) return new GetFunction(myGroupRef,myAttrRef);}
                                }
                        } else {
                                myGroupRef = new GroupExpressExpression(myGroupOrAttributToken.image.substring(1).toLowerCase());
                                myAttrRef = new AttributExpressExpression(myAttrToken.image.substring(1).toLowerCase(), myGroupRef);
                                {if (true) return new GetFunction(myGroupRef,myAttrRef);}
                        }
                } catch (ExpressException e) {
                        {if (true) throw new Error(e.toString());}
                }
    throw new Error("Missing return statement in function");
  }

  final private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
  }

  final private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
  }

  final private boolean jj_2_3(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
  }

  final private boolean jj_2_4(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
  }

  final private boolean jj_2_5(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
  }

  final private boolean jj_2_6(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_6(); }
    catch(LookaheadSuccess ls) { return true; }
  }

  final private boolean jj_2_7(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_7(); }
    catch(LookaheadSuccess ls) { return true; }
  }

  final private boolean jj_2_8(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_8(); }
    catch(LookaheadSuccess ls) { return true; }
  }

  final private boolean jj_2_9(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_9(); }
    catch(LookaheadSuccess ls) { return true; }
  }

  final private boolean jj_2_10(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_10(); }
    catch(LookaheadSuccess ls) { return true; }
  }

  final private boolean jj_2_11(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_11(); }
    catch(LookaheadSuccess ls) { return true; }
  }

  final private boolean jj_2_12(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_12(); }
    catch(LookaheadSuccess ls) { return true; }
  }

  final private boolean jj_2_13(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_13(); }
    catch(LookaheadSuccess ls) { return true; }
  }

  final private boolean jj_2_14(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_14(); }
    catch(LookaheadSuccess ls) { return true; }
  }

  final private boolean jj_2_15(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_15(); }
    catch(LookaheadSuccess ls) { return true; }
  }

  final private boolean jj_2_16(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_16(); }
    catch(LookaheadSuccess ls) { return true; }
  }

  final private boolean jj_2_17(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_17(); }
    catch(LookaheadSuccess ls) { return true; }
  }

  final private boolean jj_2_18(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_18(); }
    catch(LookaheadSuccess ls) { return true; }
  }

  final private boolean jj_2_19(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_19(); }
    catch(LookaheadSuccess ls) { return true; }
  }

  final private boolean jj_2_20(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_20(); }
    catch(LookaheadSuccess ls) { return true; }
  }

  final private boolean jj_2_21(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_21(); }
    catch(LookaheadSuccess ls) { return true; }
  }

  final private boolean jj_2_22(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_22(); }
    catch(LookaheadSuccess ls) { return true; }
  }

  final private boolean jj_2_23(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_23(); }
    catch(LookaheadSuccess ls) { return true; }
  }

  final private boolean jj_2_24(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_24(); }
    catch(LookaheadSuccess ls) { return true; }
  }

  final private boolean jj_2_25(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_25(); }
    catch(LookaheadSuccess ls) { return true; }
  }

  final private boolean jj_2_26(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_26(); }
    catch(LookaheadSuccess ls) { return true; }
  }

  final private boolean jj_3_11() {
    if (jj_3R_11()) return true;
    return false;
  }

  final private boolean jj_3_10() {
    if (jj_3R_10()) return true;
    return false;
  }

  final private boolean jj_3_12() {
    if (jj_scan_token(ASSIGNMENT)) return true;
    return false;
  }

  final private boolean jj_3R_6() {
    if (jj_scan_token(SET)) return true;
    if (jj_scan_token(PARO)) return true;
    return false;
  }

  final private boolean jj_3_14() {
    if (jj_scan_token(MINUS_ASSIGNMENT)) return true;
    return false;
  }

  final private boolean jj_3_13() {
    if (jj_scan_token(PLUS_ASSIGNMENT)) return true;
    return false;
  }

  final private boolean jj_3_4() {
    if (jj_scan_token(SEQUENCE)) return true;
    if (jj_3R_4()) return true;
    return false;
  }

  final private boolean jj_3R_5() {
    if (jj_scan_token(REMOVE)) return true;
    if (jj_scan_token(PARO)) return true;
    return false;
  }

  final private boolean jj_3R_11() {
    if (jj_scan_token(IDENT)) return true;
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_12()) {
    jj_scanpos = xsp;
    if (jj_3_13()) {
    jj_scanpos = xsp;
    if (jj_3_14()) return true;
    }
    }
    return false;
  }

  final private boolean jj_3_8() {
    if (jj_3R_8()) return true;
    return false;
  }

  final private boolean jj_3_7() {
    if (jj_3R_7()) return true;
    return false;
  }

  final private boolean jj_3_6() {
    if (jj_3R_6()) return true;
    return false;
  }

  final private boolean jj_3_9() {
    if (jj_3R_9()) return true;
    return false;
  }

  final private boolean jj_3_5() {
    if (jj_3R_5()) return true;
    return false;
  }

  final private boolean jj_3R_4() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_5()) {
    jj_scanpos = xsp;
    if (jj_3_6()) {
    jj_scanpos = xsp;
    if (jj_3_7()) {
    jj_scanpos = xsp;
    if (jj_3_8()) {
    jj_scanpos = xsp;
    if (jj_3_9()) return true;
    }
    }
    }
    }
    return false;
  }

  final private boolean jj_3R_8() {
    if (jj_scan_token(REPLACE)) return true;
    if (jj_scan_token(PARO)) return true;
    return false;
  }

  final private boolean jj_3R_3() {
    if (jj_3R_4()) return true;
    return false;
  }

  final private boolean jj_3_3() {
    if (jj_scan_token(0)) return true;
    return false;
  }

  final private boolean jj_3_26() {
    if (jj_scan_token(COMA)) return true;
    if (jj_scan_token(IDENT)) return true;
    return false;
  }

  final private boolean jj_3_1() {
    if (jj_3R_3()) return true;
    return false;
  }

  final private boolean jj_3R_9() {
    if (jj_scan_token(CREATE)) return true;
    if (jj_scan_token(PARO)) return true;
    return false;
  }

  final private boolean jj_3R_13() {
    if (jj_scan_token(GETVALUE)) return true;
    if (jj_scan_token(PARO)) return true;
    return false;
  }

  final private boolean jj_3_2() {
    if (jj_scan_token(VOID_TYPE)) return true;
    if (jj_scan_token(0)) return true;
    return false;
  }

  final private boolean jj_3_17() {
    if (jj_scan_token(MINUS)) return true;
    return false;
  }

  final private boolean jj_3_25() {
    if (jj_scan_token(PARO)) return true;
    if (jj_3R_14()) return true;
    return false;
  }

  final private boolean jj_3_22() {
    if (jj_scan_token(UNKNOWN_INT)) return true;
    return false;
  }

  final private boolean jj_3_24() {
    if (jj_scan_token(UNKNOWN_BOOLEAN)) return true;
    return false;
  }

  final private boolean jj_3R_7() {
    if (jj_scan_token(ADD)) return true;
    if (jj_scan_token(PARO)) return true;
    return false;
  }

  final private boolean jj_3_23() {
    if (jj_scan_token(UNKNOWN_STRING)) return true;
    return false;
  }

  final private boolean jj_3_20() {
    if (jj_scan_token(INTEGER)) return true;
    return false;
  }

  final private boolean jj_3_21() {
    if (jj_scan_token(BOOLEAN)) return true;
    return false;
  }

  final private boolean jj_3R_12() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_18()) {
    jj_scanpos = xsp;
    if (jj_3_19()) {
    jj_scanpos = xsp;
    if (jj_3_20()) {
    jj_scanpos = xsp;
    if (jj_3_21()) {
    jj_scanpos = xsp;
    if (jj_3_22()) {
    jj_scanpos = xsp;
    if (jj_3_23()) {
    jj_scanpos = xsp;
    if (jj_3_24()) {
    jj_scanpos = xsp;
    if (jj_3_25()) return true;
    }
    }
    }
    }
    }
    }
    }
    return false;
  }

